--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 </head>
 <body>
     <div id="calculator">
-        
+        <div id="display">
+            <div id="last-calc"></div>
+            <div id="result">
+                <img src="./assets/equals.svg" alt="sinal de igual">
+                <span>2</span>
+            </div>
+        </div>
     </div>
 </body>
 </html>
