--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         </div>
         <div id="keyboard">
             <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button>4</button>
+            <button class="secondary">2</button>
+            <button class="tertiary">3</button>
+            <button class="quartiary">4</button>
         </div>
     </div>
 </body>
