--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
             </div>
         </div>
         <div id="keyboard">
-            <button>1</button>
-            <button class="secondary">2</button>
-            <button class="tertiary">3</button>
+            <button class="secondary">CE</button>
+            <button>C</button>
+            <button>%</button>
+            <button class="tertiary">
+                <img src="./assets/divide.svg" alt="Divide">
+            </button>
             <button class="quartiary">4</button>
         </div>
     </div>
