--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 <body>
     <div id="calculator">
         <div id="display">
-            <div id="last-calc"></div>
+            <div id="last-calc">
+                1 + 1
+            </div>
             <div id="result">
                 <img src="./assets/equals.svg" alt="sinal de igual">
                 <span>2</span>
@@ -28,7 +30,32 @@
             <button class="tertiary">
                 <img src="./assets/divide.svg" alt="Divide">
             </button>
-            <button class="quartiary">4</button>
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+            <button class="tertiary">
+                <img src="./assets/multiply.svg" alt="Multiplica">
+            </button>
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button class="tertiary">
+                <img src="./assets/minus.svg" alt="subitração">
+            </button>
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button class="tertiary">
+                <img src="./assets/plus.svg" alt="soma">
+            </button>
+            <button>
+                <img src="./assets/plusMinus.svg" alt="muda sinal">
+            </button>
+            <button>0</button>
+            <button>,</button>
+            <button class="quartiary">
+                <img src="./assets/equalsBtn.svg" alt="igual">
+            </button>
         </div>
     </div>
 </body>
